# ebus-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic-implementation.rs
src/: bus.rs  event.rs  lib.rs  subscriber.rs
