[package]
name = "ebus"
version = "1.1.0"
authors = ["WeirdPtr <WeirdPtr@WeirdPtr.com>"]
description = "Basic Event Bus implementation"
edition = "2021"
license = "MIT"
repository = "https://github.com/WeirdPtr/ebus"
keywords = ["eventbus", "events", "lightweight"]

[dependencies]
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.2", features = ["full"] }
