[package]
name = "ebus"
version = "1.2.0"
authors = ["WeirdPtr <WeirdPtr@WeirdPtr.com>"]
description = "Basic Event Bus implementation"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WeirdPtr/ebus"
keywords = ["eventbus", "events", "lightweight"]
include = ["src/**/*", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[dependencies]
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.2", features = ["full"] }

[features]
default = ["async_subscriber"]
async_subscriber = []